syntax = "proto2";
package douyin.extra.second;

option go_package = "../pkg;message";

import "user.proto";

/*
    /douyin/relation/action -关系操作
    关注、取消关注
    POST
*/

message douyin_relation_action_request {
    required int64 user_id = 1; // 用户id
    required string token = 2; // 用户鉴权token
    required int64 to_user_id = 3; // 对方用户id​
    required int32 action_type = 4; // 1-关注，2-取消关注
}
message douyin_relation_action_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述​
}

/*
    /douyin/relation/follow/list -关注列表
    获取关注列表
    GET
*/

message douyin_relation_follow_list_request {
    required int64 user_id = 1; // 用户id​
    required string token = 2; // 用户鉴权token​
}
message douyin_relation_follow_list_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    optional string status_msg = 2; // 返回状态描述
    required douyin.core.User user_list = 3; // 用户信息列表​
}

/*
    /douyin/relation/follower/list -粉丝列表
    获取粉丝列表
    GET
*/

message douyin_relation_follower_list_request {
    required int64 user_id = 1; // 用户id​
    required string token = 2; // 用户鉴权token​
}
message douyin_relation_follower_list_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述​
    repeated douyin.core.User user_list = 3; // 用户列表​
}
// message User {
//     required int64 id = 1; // 用户id​
//     required string name = 2; // 用户名称​
//     optional int64 follow_count = 3; // 关注总数​
//     optional int64 follower_count = 4; // 粉丝总数​
//     required bool is_follow = 5; // true-已关注，false-未关注​
// }